# duplex-pdf-cat

./: README.md  pyproject.toml
src/duplex_pdf_cat/: cli.py
tests/: test_main.py
